Redundant endpoint removed
